--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -36,6 +36,18 @@ pg_activity is a htop like application for PostgreSQL server activity monitoring
 
 =back
 
+=head1 ENVIRONMENT VARIABLES
+
+=over 2
+
+=item B<PGPASSWORD>
+
+    PostgreSQL password
+
+=item B<PGPASSFILE>
+
+    Path to .pgpass file (default is ~/.pgpass)
+
 =head1 DISPLAY OPTIONS
 
 =over 2
@@ -102,11 +114,11 @@ pg_activity is a htop like application for PostgreSQL server activity monitoring
 
 =item B<->     Decrease refesh time. Minimum Value : 1s
 
-=item B<F1>    Running queries monitoring.
+=item B<F1/1>    Running queries monitoring.
 
-=item B<F2>    Locked queries monitoring.
+=item B<F2/2>    Locked queries monitoring.
 
-=item B<F3>    Blocking queries monitoring.
+=item B<F3/3>    Blocking queries monitoring.
 
 =item B<h>     Help page.
 
