Fix documentation for default hostname value

--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -20,7 +20,7 @@ pg_activity is a htop like application for PostgreSQL server activity monitoring
 
 =item B<-h HOSTNAME>, B<--host=HOSTNAME>
 
-	Database server host or socket directory (default: "local socket").
+	Database server host or socket directory (default: "localhost").
 
 =item B<-C>, B<--no-color>
 
