Man page update.

--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -48,6 +48,8 @@ pg_activity is a htop like application for PostgreSQL server activity monitoring
 
     Path to .pgpass file (default is ~/.pgpass)
 
+=back
+
 =head1 DISPLAY OPTIONS
 
 =over 2
