--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -176,8 +176,9 @@ pg_activity is a htop like application for PostgreSQL server activity monitoring
 .Ve
 .IP "\fB\s-1PGPASSFILE\s0\fR" 2
 .IX Item "PGPASSFILE"
-.Vb 1
+.Vb 2
 \&    Path to .pgpass file (default is ~/.pgpass)
+\&=back
 .Ve
 .SH "DISPLAY OPTIONS"
 .IX Header "DISPLAY OPTIONS"
@@ -281,6 +282,6 @@ pg_activity \-h /tmp
 .SH "POD ERRORS"
 .IX Header "POD ERRORS"
 Hey! \fBThe above document had some coding errors, which are explained below:\fR
-.IP "Around line 51:" 4
-.IX Item "Around line 51:"
+.IP "Around line 52:" 4
+.IX Item "Around line 52:"
 You forgot a '=back' before '=head1'
