--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2013-04-10" "pg_activity 1.0.1" "PostgreSQL server activity monitoring tool"
+.TH PG_ACTIVITY 1 "2013-04-12" "pg_activity 1.0.1" "PostgreSQL server activity monitoring tool"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -140,7 +140,7 @@ pg_activity is a htop like application for PostgreSQL server activity monitoring
 .IP "\fB\-U \s-1USERNAME\s0\fR, \fB\-\-username=USERNAME\fR" 2
 .IX Item "-U USERNAME, --username=USERNAME"
 .Vb 1
-\&        Database user name (default: "postgres").
+\&        Database user name (default: $USER).
 .Ve
 .IP "\fB\-p \s-1PORT\s0\fR, \fB\-\-port=PORT\fR" 2
 .IX Item "-p PORT, --port=PORT"
@@ -151,6 +151,11 @@ pg_activity is a htop like application for PostgreSQL server activity monitoring
 .IX Item "-h HOSTNAME, --host=HOSTNAME"
 .Vb 1
 \&        Database server host or socket directory (default: "localhost").
+.Ve
+.IP "\fB\-d \s-1DBNAME\s0\fR, \fB\-\-dbname=DBNAME\fR" 2
+.IX Item "-d DBNAME, --dbname=DBNAME"
+.Vb 1
+\&    Database name to connect to (default: "postgres").
 .Ve
 .IP "\fB\-C\fR, \fB\-\-no\-color\fR" 2
 .IX Item "-C, --no-color"
