Add missing command line option (-d) in SYNOPSIS summary + Add a NAME section in manpage (required by tools like apropos or whatis)

--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -1,6 +1,10 @@
+=head1 NAME
+
+pg_activity - Realtime PostgreSQL database server monitoring tool
+
 =head1 SYNOPSIS
 
-B<pg_activity> [-UphC]
+B<pg_activity> [-UphdC]
 
 =head1 DESCRIPTION
 
