--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -124,14 +124,16 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2013-04-12" "pg_activity 1.0.1" "PostgreSQL server activity monitoring tool"
+.TH PG_ACTIVITY 1 "2013-04-15" "pg_activity 1.0.1" "PostgreSQL server activity monitoring tool"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
 .nh
+.SH "NAME"
+pg_activity \- Realtime PostgreSQL database server monitoring tool
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-\&\fBpg_activity\fR [\-UphC]
+\&\fBpg_activity\fR [\-UphdC]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 pg_activity is a htop like application for PostgreSQL server activity monitoring.
