--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -124,7 +124,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2013-06-25" "pg_activity 1.0.2" "PostgreSQL server activity monitoring tool"
+.TH PG_ACTIVITY 1 "2013-07-17" "pg_activity 1.0.3 dev" "PostgreSQL server activity monitoring tool"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
