Update manpage's NAME section so that tools such as whatis(1) or apropos(1) could use it

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,13 +133,13 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2015-11-26" "pg_activity 1.3.0" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2015-12-02" "pg_activity 1.3.0" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
 .nh
 .SH "NAME"
-pg_activity
+pg_activity \- Realtime PostgreSQL database server monitoring tool
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
 \&\fBpg_activity\fR [option..]
