--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-pg_activity
+pg_activity - Realtime PostgreSQL database server monitoring tool
 
 =head1 SYNOPSIS
 
@@ -163,7 +163,7 @@ Command line tool for PostgreSQL server activity monitoring.
 =head1 NAVIGATION MODE
 
 =over 2
-	
+
 =item B<UP>    Move up the cursor.
 
 =item B<DOWN>  Move down the cursor.
