Fix various typos

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -292,8 +292,8 @@ Command line tool for PostgreSQL server activity monitoring.
 .IX Item "q Quit"
 .IP "\fB+\fR     Increase refresh time. Maximum value : 3s" 2
 .IX Item "+ Increase refresh time. Maximum value : 3s"
-.IP "\fB\-\fR     Decrease refesh time. Minimum Value : 1s" 2
-.IX Item "- Decrease refesh time. Minimum Value : 1s"
+.IP "\fB\-\fR     Decrease refresh time. Minimum Value : 1s" 2
+.IX Item "- Decrease refresh time. Minimum Value : 1s"
 .IP "\fBF1/1\fR  Running queries monitoring." 2
 .IX Item "F1/1 Running queries monitoring."
 .IP "\fBF2/2\fR  Waiting queries monitoring." 2
