--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -10,6 +10,10 @@ B<pg_activity> [option..]
 
 Command line tool for PostgreSQL server activity monitoring.
 
+pg_activity must run on the same server than the instance and
+as the user running the instance (or root) to show
+CPU, MEM, READ or WRITE columns and other system informations.
+
 =head1 COMMAND-LINE OPTIONS
 
 =over 2
@@ -182,6 +186,8 @@ Command line tool for PostgreSQL server activity monitoring.
 
 PGPASSWORD='mypassword' pg_activity -U pgadmin -h 127.0.0.1 --no-client
 
-pg_activity -h /tmp
+pg_activity -h /var/run/postgresql
+
+pg_activity -h myserver -p 5433 -d nagios -U nagios
 
 =cut
