--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2018-10-02" "pg_activity 1.4.0" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2018-12-12" "pg_activity 1.4.0" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -227,6 +227,11 @@ as the user running the instance (or root) to show
 .Vb 1
 \&        Disable DATABASE.
 .Ve
+.IP "\fB\-\-no\-db\-size\fR" 2
+.IX Item "--no-db-size"
+.Vb 1
+\&        Disable DATABASE size.
+.Ve
 .IP "\fB\-\-no\-user\fR" 2
 .IX Item "--no-user"
 .Vb 1
@@ -266,6 +271,11 @@ as the user running the instance (or root) to show
 .IX Item "--no-wait"
 .Vb 1
 \&        Disable W.
+.Ve
+.IP "\fB\-\-no\-app\-name\fR" 2
+.IX Item "--no-app-name"
+.Vb 1
+\&        Disable App.
 .Ve
 .SH "INTERACTIVE COMMANDS"
 .IX Header "INTERACTIVE COMMANDS"
