Add --output option
This new option defines a file path where to store running
queries/backends using CSV format. Default value is None, meaning the
feature is not active.
Running queries storage is working when pg_activity is on RUNNING
QUERIES tab only.

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -183,6 +183,11 @@ as the user running the instance (or root) to show
 .Vb 1
 \&        Enable support for AWS RDS.
 .Ve
+.IP "\fB\-\-output=FILEPATH\fR" 2
+.IX Item "--output=FILEPATH"
+.Vb 1
+\&        Store running queries as CSV.
+.Ve
 .IP "\fB\-\-help\fR" 2
 .IX Item "--help"
 .Vb 1
