Add --verbose-mode in man page

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -183,6 +183,11 @@ as the user running the instance (or root) to show
 .Vb 1
 \&        Enable support for AWS RDS.
 .Ve
+.IP "\fB\-\-verbose\-mode=VERBOSE_MODE\fR" 2
+.IX Item "--verbose-mode=VERBOSE_MODE"
+.Vb 1
+\&        Queries display mode. Values: 1\-TRUNCATED, 2\-FULL(default), 3\-INDENTED
+.Ve
 .IP "\fB\-\-output=FILEPATH\fR" 2
 .IX Item "--output=FILEPATH"
 .Vb 1
