--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -46,13 +46,17 @@ CPU, MEM, READ or WRITE columns and other system informations.
 
 	Enable support for AWS RDS.
 
-=item B<--verbose-mode=VERBOSE_MODE>
-
-	Queries display mode. Values: 1-TRUNCATED, 2-FULL(default), 3-INDENTED
-
 =item B<--output=FILEPATH>
 
 	Store running queries as CSV.
+
+=item B<--no-db-size>
+
+	Skip total size of DB.
+
+=item B<--verbose-mode=VERBOSE_MODE>
+
+	Queries display mode. Values: 1-TRUNCATED, 2-FULL(default), 3-INDENTED
 
 =item B<--help>
 
@@ -97,10 +101,6 @@ CPU, MEM, READ or WRITE columns and other system informations.
 =item B<--no-database>
 
 	Disable DATABASE.
-
-=item B<--no-db-size>
-
-	Disable DATABASE size.
 
 =item B<--no-user>
 
