--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -324,6 +324,8 @@ as the user running the instance (or root) to show
 .IX Item "h Help page."
 .IP "\fBR\fR     Refresh." 2
 .IX Item "R Refresh."
+.IP "\fBR\fR     Refresh database size." 2
+.IX Item "D Refresh database size."
 .PD
 .SH "NAVIGATION MODE"
 .IX Header "NAVIGATION MODE"
