--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2019-03-03" "pg_activity 1.5.0" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2020-02-14" "pg_activity 1.5.0" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -197,6 +197,11 @@ as the user running the instance (or root) to show
 .IX Item "--verbose-mode=VERBOSE_MODE"
 .Vb 1
 \&        Queries display mode. Values: 1\-TRUNCATED, 2\-FULL(default), 3\-INDENTED
+.Ve
+.IP "\fB\-\-duration\-mode=DURATION_MODE\fR" 2
+.IX Item "--duration-mode=DURATION_MODE"
+.Vb 1
+\&        Duration mode. Values: 1\-QUERY(default), 2\-TRANSACTION, 3\-BACKEND
 .Ve
 .IP "\fB\-\-help\fR" 2
 .IX Item "--help"
@@ -324,7 +329,7 @@ as the user running the instance (or root) to show
 .IX Item "h Help page."
 .IP "\fBR\fR     Refresh." 2
 .IX Item "R Refresh."
-.IP "\fBR\fR     Refresh database size." 2
+.IP "\fBD\fR     Refresh database size." 2
 .IX Item "D Refresh database size."
 .PD
 .SH "NAVIGATION MODE"
