Man page entry + help text unification

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -193,6 +193,11 @@ as the user running the instance (or root) to show
 .Vb 1
 \&        Skip total size of DB.
 .Ve
+.IP "\fB\-\-min\-duration=SECONDS\fR" 2
+.IX Item "--min-duration=SECONDS"
+.Vb 1
+\&        Don\*(Aqt display queries with smaller than specified duration (in seconds).
+.Ve
 .IP "\fB\-\-verbose\-mode=VERBOSE_MODE\fR" 2
 .IX Item "--verbose-mode=VERBOSE_MODE"
 .Vb 1
