Fix a typo in man page
Picked from https://salsa.debian.org/kolter/pg-activity/-/blob/debian/1.6.2-1/debian/patches/fix_typos_manpages

--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -12,7 +12,7 @@ Command line tool for PostgreSQL server activity monitoring.
 
 pg_activity must run on the same server than the instance and
 as the user running the instance (or root) to show
-CPU, MEM, READ or WRITE columns and other system informations.
+CPU, MEM, READ or WRITE columns and other system information.
 
 =head1 COMMAND-LINE OPTIONS
 
