--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -145,7 +145,7 @@ Command line tool for PostgreSQL server activity monitoring.
 .PP
 pg_activity must run on the same server than the instance and
 as the user running the instance (or root) to show
-\&\s-1CPU, MEM, READ\s0 or \s-1WRITE\s0 columns and other system informations.
+\&\s-1CPU, MEM, READ\s0 or \s-1WRITE\s0 columns and other system information.
 .SH "COMMAND-LINE OPTIONS"
 .IX Header "COMMAND-LINE OPTIONS"
 .IP "\fB\-U \s-1USERNAME\s0\fR, \fB\-\-username=USERNAME\fR" 2
