Document --no-pid in man page

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -242,6 +242,11 @@ as the user running the instance (or root) to show
 .Ve
 .SH "DISPLAY OPTIONS"
 .IX Header "DISPLAY OPTIONS"
+.IP "\fB\-\-no\-pid\fR" 2
+.IX Item "--no-pid"
+.Vb 1
+\&        Disable PID.
+.Ve
 .IP "\fB\-\-no\-database\fR" 2
 .IX Item "--no-database"
 .Vb 1
