--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2020-11-30" "pg_activity 2.0.0" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2021-01-27" "pg_activity 2.0.3" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -142,7 +142,7 @@
 pg_activity \- Realtime PostgreSQL database server monitoring tool
 .SH "SYNOPSIS"
 .IX Header "SYNOPSIS"
-\&\fBpg_activity\fR [option..]
+\&\fBpg_activity\fR [option..] [connection string]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 Command line tool for PostgreSQL server activity monitoring.
