Rename --verbose-mode option as -w/--query-display-mode
Previous name, --verbose-mode, is not very informative about what the
option does.

We keep the previous option, deprecated, for backwards compatibility.

Fix #189.

--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -183,7 +183,7 @@ requiered by another session. It shows following information:
 
 	Skip total size of DB.
 
-=item B<--verbose-mode=VERBOSE_MODE>
+=item B<-w DISPLAY_MODE, --query-display-mode=DISPLAY_MODE>
 
 	Queries display mode. Values: 1-TRUNCATED, 2-FULL(default), 3-INDENTED
 
