Fix typo in manpage

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -246,7 +246,7 @@ shows the following information:
 .SS "\s-1THE BLOCKING QUERIES PANNEL\s0"
 .IX Subsection "THE BLOCKING QUERIES PANNEL"
 The blocking queries view displays the queries that lock an object which is
-requiered by another session. It shows following information:
+required by another session. It shows following information:
 .IP "\- \fB\s-1PID\s0\fR: process id of the backend which executes the query;" 2
 .IX Item "- PID: process id of the backend which executes the query;"
 .PD 0
