Add a new optional --dbname-filter flag
If specified the input will be matched as Postgres regex against all
fetched activites - DB info, normal activities and waiting / blocking
info. A star (*) in the UI for the DATABASE column will hint at the
option being active.

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -331,6 +331,11 @@ required by another session. It shows following information:
 .Vb 1
 \&        Don\*(Aqt display queries with smaller than specified duration (in seconds).
 .Ve
+.IP "\fB\-\-dbname\-filter=REGEX_STRING\fR" 2
+.IX Item "--dbname-filter=REGEX_STRING"
+.Vb 1
+\&        A regex to gather stats / activities only for DBs of interest. Case insensitive.
+.Ve
 .IP "\fB\-\-help\fR" 2
 .IX Item "--help"
 .Vb 1
