Add a generic --filter option, replacing --dbname-filter

--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -331,10 +331,10 @@ required by another session. It shows following information:
 .Vb 1
 \&        Don\*(Aqt display queries with smaller than specified duration (in seconds).
 .Ve
-.IP "\fB\-\-dbname\-filter=REGEX_STRING\fR" 2
-.IX Item "--dbname-filter=REGEX_STRING"
+.IP "\fB\-\-filter=FIELD:REGEX\fR" 2
+.IX Item "--filter=FIELD:REGEX"
 .Vb 1
-\&        A regex to gather stats / activities only for DBs of interest. Case insensitive.
+\&        Filter activities with a (case insensitive) regular expression applied on selected fields. Known fields are: dbname.
 .Ve
 .IP "\fB\-\-help\fR" 2
 .IX Item "--help"
