Replace --query-display-mode option by --wrap-query flag
The new option is now a flag which toggles query wrapping in the column.
This effectively disable to (previous default) mode that displays the
query wrapped over the whole line (not just the column).

The --verbose-mode option, deprecated since version 2.2.0, is dropped.

Accordingly, we bump the version to 3.0.0.

--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -183,9 +183,9 @@ required by another session. It shows following information:
 
 	Skip total size of DB.
 
-=item B<-w DISPLAY_MODE, --query-display-mode=DISPLAY_MODE>
+=item B<-w, --wrap-query>
 
-	Queries display mode. Values: 1-TRUNCATED, 2-FULL(default), 3-INDENTED
+	Wrap query column instead of truncating
 
 =item B<--duration-mode=DURATION_MODE>
 
