--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2021-08-05" "pg_activity 2.2.1" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2022-01-05" "pg_activity 3.0.0" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -316,10 +316,10 @@ required by another session. It shows following information:
 .Vb 1
 \&        Skip total size of DB.
 .Ve
-.IP "\fB\-w \s-1DISPLAY_MODE,\s0 \-\-query\-display\-mode=DISPLAY_MODE\fR" 2
-.IX Item "-w DISPLAY_MODE, --query-display-mode=DISPLAY_MODE"
+.IP "\fB\-w, \-\-wrap\-query\fR" 2
+.IX Item "-w, --wrap-query"
 .Vb 1
-\&        Queries display mode. Values: 1\-TRUNCATED, 2\-FULL(default), 3\-INDENTED
+\&        Wrap query column instead of truncating
 .Ve
 .IP "\fB\-\-duration\-mode=DURATION_MODE\fR" 2
 .IX Item "--duration-mode=DURATION_MODE"
