--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "PG_ACTIVITY 1"
-.TH PG_ACTIVITY 1 "2022-06-09" "pg_activity 3.0.0a1" "Command line tool for PostgreSQL server activity monitoring."
+.TH PG_ACTIVITY 1 "2022-06-10" "pg_activity 3.0.0a1" "Command line tool for PostgreSQL server activity monitoring."
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -172,8 +172,8 @@ Global :
 .IX Item "- dbs size: total size of the databases (filtered);"
 .IP "\- \fBgrowth\fR: groth in B/s of the databases (filtered);" 2
 .IX Item "- growth: groth in B/s of the databases (filtered);"
-.IP "\- \fBcache hit ratio\fR: the percentage of page read from the PostgreSQL's cache (filtered)." 2
-.IX Item "- cache hit ratio: the percentage of page read from the PostgreSQL's cache (filtered)."
+.IP "\- \fBcache hit ratio\fR: the percentage of page read from the PostgreSQL's cache since last snapshot (filtered)." 2
+.IX Item "- cache hit ratio: the percentage of page read from the PostgreSQL's cache since last snapshot (filtered)."
 .PD
 .PP
 Sessions :
