--- a/docs/man/pg_activity.pod
+++ b/docs/man/pg_activity.pod
@@ -38,7 +38,7 @@ Global :
 
 =item - B<growth>: groth in B/s of the databases (filtered);
 
-=item - B<cache hit ratio>: the percentage of page read from the PostgreSQL's cache (filtered).
+=item - B<cache hit ratio>: the percentage of page read from the PostgreSQL's cache since last snapshot (filtered).
 
 =back
 
