--- a/docs/man/pg_activity.1
+++ b/docs/man/pg_activity.1
@@ -420,7 +420,7 @@ required by another session. It shows following information:
 .SH "ENVIRONMENT VARIABLES"
 .IX Header "ENVIRONMENT VARIABLES"
 .RS 2
-All the environnement variables supported by libpq (PostgreSQL's query
+All the environment variables supported by libpq (PostgreSQL's query
 protocol) are supported by pg_activity.
 .Sp
 See: https://www.postgresql.org/docs/current/libpq\-envars.html
